added some features for contact page

--- a/css/style.css
+++ b/css/style.css
@@ -164,3 +164,19 @@ body {
   margin: 0;
   color: #444;
 }
+
+/* Notification */
+.alert-animated {
+      animation: fadeInDown 0.5s ease-in-out;
+    }
+
+    @keyframes fadeInDown {
+      from {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
